changed link to book site

--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
         	<li>
         		<!-- R book -->
 		        <div class="span3">
-		          <a class="thumbnail project-thumb-img" href="#" target="_blank">
+		          <a class="thumbnail project-thumb-img" href="http://markheckmann.github.io/r-book-1/" target="_blank">
 		            <img src="./img/ryouready-buch.jpg" alt="R you ready Buch">
 		          </a>
 		        </div>
 		        <div class="span3">
-		          <p class="text-left description2">The book (not yet available) <a href="#" target="_blank">R you ready? - Ein Einstieg für Human- und Sozialwissenschaftler</a> 
+		          <p class="text-left description2">The book (not yet available) <a href="http://markheckmann.github.io/r-book-1/" target="_blank">R you ready? - Ein Einstieg für Human- und Sozialwissenschaftler</a> 
         	        is written in German for R beginners. 
         	        It is directed towards social scientists who do not have any experience with a 
         	        programming language. The book will gently guide you towards understanding the R language and 
